-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
EL 6.7, x86_64, mellanox FDR, lustre 2.8.0 client and server. 1 combined mds/mdt, and 7 combined oss/ost.
-
3
-
9223372036854775807
On the OSS's, a few times a day, I see in the logs:
Apr 27 16:00:57 oss1 kernel: Lustre: 41839:0:(osd_handler.c:1265:osd_trans_dump_creds()) create: 0/0/0, destroy: 0/0/0
Apr 27 16:00:57 oss1 kernel: Lustre: 41839:0:(osd_handler.c:1272:osd_trans_dump_creds()) attr_set: 1/1/0, xattr_set: 2/15/0
Apr 27 16:00:57 oss1 kernel: Lustre: 41839:0:(osd_handler.c:1282:osd_trans_dump_creds()) write: 2/12/0, punch: 1/4/0, quota 4/4/0
Apr 27 16:00:57 oss1 kernel: Lustre: 41839:0:(osd_handler.c:1289:osd_trans_dump_creds()) insert: 0/0/0, delete: 0/0/0
Apr 27 16:00:57 oss1 kernel: Lustre: 41839:0:(osd_handler.c:1296:osd_trans_dump_creds()) ref_add: 0/0/0, ref_del: 0/0/0
Apr 27 16:00:57 oss1 kernel: LustreError: 41839:0:(osd_internal.h:1073:osd_trans_exec_op()) blizzard-OST0000-osd: op = 7, rb = 7
Not sure what triggers it for sure. We have a mixed workload of mpi, and serial type jobs.
The values are always the same: write 2/10/0, punch 1/4/0 , etc. A limit I imagine. It almost seems like debug type logs that are not super important.
- mentioned in
-
Page Loading...