LU-8081 osd-ldiskfs: improve transaction debug message

Print the actual credit limits that were exceeded when complaining
on the console about problems with transaction credit accounting.

Ensure all transaction credit messages include the device name.

Remove oti_dev since it is never set and is just misleading, since
I'd wanted to use it to get the device name in the debug messages.

Use osd_device->od_svname directly instead of obd_name indirectly.
Probably obd_name() should be removed entirely since it only
dereferences a single pointer, but that is for a separate patch.

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: I17125bb39ecaf699a722ac77bf29060cde3ebbe5